# xhs_agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
doc/: API.md
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
js/xhs/: xhs_xs_new.js
src/xhs_agent/: config.py  db.py  middleware.py
src/xhs_agent/agent/: prompt_agent.py  xhs_agent.py
src/xhs_agent/api/: router.py  schemas.py
src/xhs_agent/services/: account_image_service.py  account_service.py  browser_service.py  cos_service.py  goal_service.py  image_service.py  manager_service.py  notification_service.py  scheduler_service.py  text_service.py  upload_service.py  vision_service.py  xhs_http.py
static/: index.html
static/assets/: index-B4jIKJak.js  index-BjPwUFey.js  index-Bzj1UAcZ.js  index-CitYUl7x.js  index-Cj6ZCGIE.css  index-D7porURy.js  index-DYa2C52N.js  index-Da6XZ753.js
xhs_tools/: __init__.py  help.py  xhs.md  xhsAPI.md  xhs_logic.py
xhs_tools/js/: xhs_deprecated.js
xhs_tools/js/xhs/: xhs_encrpty_test.py  xhs_xmns.js  xhs_xs.js  xhs_xs_deprecated.js  xhs_xs_new.js
