[project]
name = "xhs-agent"
version = "0.1.0"
description = "小红书内容自动生成 Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "xhs>=0.2.13",
    "playwright>=1.58.0",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
]

[project.scripts]
xhs-agent = "main:main"
