[project]
name = "xhs-agent"
version = "0.1.0"
description = "小红书内容自动生成 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "xhs>=0.2.13",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "pyexecjs>=1.5.1",
    "curl-cffi>=0.14.0",
    "tenacity>=9.1.4",
    "wxpusher>=1.0.0",
    "cos-python-sdk-v5>=1.9.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
xhs-agent = "main:main"
